# F5-TTS-Vietnamese

./: .gitignore  pyproject.toml
src/f5_tts.egg-info/: PKG-INFO  requires.txt
